k8s/apps/gearhawk-website/gearhawk-nextjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs-container
          image: wjt40398/gearhawk:web-gearhawk
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 2
              memory: 2Gi
            limits:
              cpu: 4
              memory: 6Gi
      imagePullSecrets:
        - name: docker-secret
