k8s/apps/gearhawk-website/gearhawk-nextjs/nextjs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-svc
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: nextjs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
