k8s/apps/gearhawk-website/gearhawk-nextjs/external-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextjs-external
  namespace: gearhawk-website
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - gearhawk.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hono-svc
          port: 80
